JPMS compatibility